Fix spacing between validation symbol and message

--- a/styles/ValidationMessage.module.css
+++ b/styles/ValidationMessage.module.css
@@ -15,4 +15,8 @@
 .warningIcon {
     color: rgba(255, 191, 0, 1);
     font-size: 16pt;
+    margin-right: 10px;
+    display: inline-block;
+    position: relative;
+    top: 2px;
 }
